# psp2shell

./: .gitignore  CMakeLists.txt  LICENCE  README.MD  Vita.cmake  build_client.sh  config.txt
common/: cmd_common.c  cmd_common.h  libmodule.c  libmodule.h  p2s_cmd.c  p2s_cmd.h  p2s_module.c  p2s_msg.c  p2s_msg.h  taihen.json
common/include/: libmodule.h  psp2cmd.h
common/source/: binn.c  libmodule.c  psp2cmd.c
psp2shell/: CMakeLists.txt  psp2shell.yml
psp2shell/include/: file.h  main.h  module.h  psp2shell.h  utility.h
psp2shell/source/: file.c  hooks.c  hooks.h  main.c  module.c  pool.c  pool.h  thread.c  utility.c
psp2shell_cli/: CMakeLists.txt  Makefile.win
psp2shell_cli/cmake/Modules/: Findlibusb-0.1.cmake
psp2shell_cli/include/: cmd.h  main.h  utility.h
psp2shell_cli/source/: cmd.c  main.c  utility.c
psp2shell_cli/usbhostfs_pc/: CMakeLists.txt  hostfs.c  hostfs.h  main.c  psp_fileio.h
psp2shell_k/: CMakeLists.txt  README.md  cmd.c  file.c  file.h  hooks.c  hooks.h  kp2s_cmd_parser.c  kp2s_cmd_parser.h  kp2s_hooks.c  kp2s_hooks.h  kp2s_hooks_io.c  kp2s_hooks_io.h  kp2s_io.c  kp2s_io.h  kp2s_main.c  kp2s_utility.c  kp2s_utility.h  kutility.c  kutility.h  main.c  module.c  module.h  net.c  net.h  patch.c  patch.h  psp2shell_k.h  psp2shell_k.yml  psp2shell_k_usb.yml  psp2shellusb_k.yml  utility.c  utility.h
psp2shell_k/include/: file.h  kutility.h  libmodule.h  psp2shell_k.h  utility.h
psp2shell_k/source/: cmd.c  file.c  main.c  module.c  utility.c
psp2shell_k/usbhostfs/: host_driver.c  host_driver.h  psp2.h  usbasync.h  usbhostfs.h
psp2shell_loader/: CMakeLists.txt
psp2shell_loader/include/: debugScreen.h  debugScreenFont.c
psp2shell_loader/source/: main.c
psp2shell_m/: CMakeLists.txt  config.txt  psp2shell_m.yml  psp2shellusb_m.yml
psp2shell_m/include/: file.h  hooks.h  libmodule.h  main.h  module.h  p2s_io.h  p2s_utility.h  psp2shell.h  taipool.h  thread.h  utility.h
psp2shell_m/source/: cmd.c  cmd.h  file.c  hooks.c  libmodule.c  main.c  module.c  p2s_cmd_parser.c  p2s_io.c  p2s_main.c  p2s_module.c  p2s_thread.c  p2s_utility.c  taipool.c  thread.c  utility.c
psp2shell_test/: CMakeLists.txt
psp2shell_test/source/: main.c
psp2shell_u/: CMakeLists.txt  psp2shell_u.yml
psp2shell_u/include/: hooks.h  main.h  module.h  utility.h
psp2shell_u/source/: file.c  hooks.c  main.c  module.c
psp2shell_usb/: CMakeLists.txt  main.c  psp2shell_usb.h  psp2shell_usb.yml
psp2shell_usb/usbhostfs/: host_driver.c  psp2.h  usbhostfs.c  usbhostfs.h
psp2shell_usb/usbhostfs_pc/: CMakeLists.txt  hostfs.h  main.c
